A general review & update of all template files to bring up to date with current best practices.

--- a/css/reset.css
+++ b/css/reset.css
@@ -160,10 +160,6 @@ button {
 	-ms-interpolation-mode: bicubic;
 	}
 
-.ie6 html {
-	filter: expression(document.execCommand("BackgroundImageCache", false, true));
-	}
-
 .clearfix:before,
 .clearfix:after {
     content: " ";
@@ -175,7 +171,7 @@ button {
 	}
 
 .assistive-text {
-	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px 1px 1px 1px); 
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
 	}
