--- a/css/reset.css
+++ b/css/reset.css
@@ -6,7 +6,7 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 	font-size: 100%;
 	vertical-align: baseline;
 	background: transparent;
-}									
+	}									
 
 article, aside, figure, footer, header, hgroup, nav, section {
 	display: block;
@@ -170,6 +170,10 @@ button {
     clear: both;
 	}
 
+.clearfix {
+    *zoom: 1;
+	}
+	
 .assistive-text {
 	clip: rect(1px 1px 1px 1px); 
 	clip: rect(1px, 1px, 1px, 1px);
