--- a/css/reset.css
+++ b/css/reset.css
@@ -6,7 +6,13 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
 	font-size: 100%;
 	vertical-align: baseline;
 	background: transparent;
-	}									
+	}	
+	
+*, *:before, *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	}								
 
 article, aside, figure, footer, header, hgroup, nav, section {
 	display: block;
