--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@ Version: 1.0
 */
 
 
+#logo {
+	margin: 0;
+	padding: 0;
+	}
+	
+#logo a {
+	text-indent: -9999px;
+	font-size: 1%;
+	overflow: hidden;
+	display: block;
+	background: url(images/logo.png);
+	width: ;
+	height: ;
+	}
+	
 /* ---------- WP Default Classes ---------- */
 
 .alignnone {
