--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -3,6 +3,15 @@
 body {
 }
 
+.container-fluid {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.wrapper {
+	overflow: hidden;
+}
+
 /* --------------- Generic Tags & Classes --------------- */
 
 img {
@@ -28,6 +37,12 @@ img {
 .alignleft {
     float: left;
     margin: 0 10px 10px 0;
+}
+
+.alignfull {
+	margin: 20px calc(50% - 50vw);
+	max-width: 100vw;
+	width: 100vw;
 }
 	
 .wp-caption {
