--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container-fluid {
-	max-width: 1000px;
+	max-width: $container;
 	margin: 0 auto;
 }
 
@@ -39,10 +39,19 @@ img {
     margin: 0 10px 10px 0;
 }
 
-.alignfull {
+.alignfull, 
+.alignwide {
 	margin: 20px calc(50% - 50vw);
 	max-width: 100vw;
 	width: 100vw;
+}
+
+@media (min-width: $alignwide) {
+	.alignwide {
+		margin: 20px -100px;
+		max-width: $container + 200px;
+		width: $container + 200px;
+	}
 }
 	
 .wp-caption {
