--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -12,6 +12,71 @@ body {
 	overflow: hidden;
 }
 
+/* --------------- Blockquote --------------- */
+
+blockquote,
+blockquote.wp-block-quote {
+	background: transparent;
+	text-align: left;
+
+	p {
+		font-size: 18px;
+		font-style: normal;
+		font-weight: normal;
+	}
+
+	cite,
+	.wp-block-quote__citation {
+		display: block;
+		font-size: 15px;
+		font-weight: bold;
+		margin-top: 12px;
+	}
+
+    p:last-of-type {
+        margin-bottom: 0;
+    }
+
+	&.is-large,
+	&.is-style-large {
+
+		p {
+			font-size: 24px;
+		}
+
+		cite,
+		.wp-block-quote__citation {
+			font-size: 16px;
+		}
+	}
+
+}
+
+/* --------------- Pull Quote --------------- */
+
+.wp-block-pullquote {
+	border: none;
+	padding: 0;
+
+	blockquote {
+		border-left: 0;
+		border-top: 5px solid lightgrey;
+		border-bottom: 5px solid lightgrey;
+		padding: 16px 0;
+		text-align: center;
+		max-width: 50%;
+		margin: 0 auto;
+	}
+
+	&.alignleft,
+	&.alignright {
+
+		blockquote {
+			max-width: 100%;
+		}
+	}
+}
+
 /* --------------- Generic Tags & Classes --------------- */
 
 img {
