--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -219,34 +219,32 @@ th {
 }	
 
 .screen-reader-text {
-	border: 0;
-	clip: rect(1px, 1px, 1px, 1px);
-	clip-path: inset(50%);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
+	clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+	box-sizing: border-box;
+	position: absolute;
+	margin: 0;
 	padding: 0;
-	position: absolute !important;
-	width: 1px;
-	word-wrap: normal !important;
-}
 
-.screen-reader-text:focus {
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-	clip: auto !important;
-	clip-path: none;
-	color: #21759b;
-	display: block;
-	font-size: 0.875rem;
-	font-weight: 700;
-	height: auto;
-	left: 5px;
-	line-height: normal;
-	padding: 15px 23px 14px;
-	text-decoration: none;
-	top: 5px;
-	width: auto;
-	z-index: 100000;
+	&:focus {
+		clip-path: none;
+		z-index: 999;
+		height: 80px;
+		line-height: 80px;
+		background: white;
+		font-size: 1.2rem;
+		text-decoration: none;
+		color: #1295e6;
+		text-align: center;
+	}
+
+	&.skip-link {
+		top: 0;
+		left: 0;
+		width: 100%;  
+
+		&:focus {
+			background: #084367;
+			color: white;
+		}
+	}
 }
