--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -5,11 +5,27 @@ html {
 }
 
 body {
+	font-size: 1.6rem;
 }
 
 .container-fluid {
-	max-width: $container;
+	max-width: var(--wp--style--global--content-size);
 	margin: 0 auto;
+	padding-left: var(--global-pad);
+	padding-right: var(--global-pad);
+}
+
+.is-layout-constrained > :where(:not(.alignleft):not(.alignright):not(.alignfull)),
+.wp-block-cover.alignfull .wp-block-cover__inner-container {
+	max-width: var(--wp--style--global--content-size);
+	margin-left: auto !important;
+	margin-right: auto !important;
+}
+
+.entry.is-layout-constrained > *,
+.wp-block-cover.alignfull .wp-block-cover__inner-container {
+	padding-left: var(--global-pad);
+	padding-right: var(--global-pad);
 }
 
 .wrapper {
@@ -139,21 +155,6 @@ img {
 .alignleft {
     float: left;
     margin: 0 10px 10px 0;
-}
-
-.alignfull, 
-.alignwide {
-	margin: 20px calc(50% - 50vw);
-	max-width: 100vw;
-	width: 100vw;
-}
-
-@media (min-width: $alignwide) {
-	.alignwide {
-		margin: 20px -100px;
-		max-width: $container + 200px;
-		width: $container + 200px;
-	}
 }
 	
 .wp-caption {
