Cleanup nav classes

--- a/css/sass/common.scss
+++ b/css/sass/common.scss
@@ -8,7 +8,7 @@ body {
 	font-size: 1.6rem;
 }
 
-.container-fluid {
+.container {
 	max-width: var(--wp--style--global--content-size);
 	margin: 0 auto;
 	padding-left: var(--global-pad);
