--- a/css/sass/_common.scss
+++ b/css/sass/_common.scss
@@ -260,3 +260,17 @@ th {
 		}
 	}
 }
+
+.reverse-mb {
+	@media (max-width: $md_mx) {
+		.wp-block-column {
+			&:first-child {
+				order: 2;
+			}
+
+			&:last-child {
+				order: 1;
+			}
+		}
+	}
+}
